syntax = "proto3";

package dm_service;

service DmserviceService {
    rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
    string message = 1;
}

message PingResponse {
    string message = 1;
}
